# Layer-ZERO

./: .gitignore  LICENSE  README.md  cardchoice.py  createroom.py  deck.json  deckmenu.py  main.py  makedeck.py  pyproject.toml  result.py  roommenu.py  roomselect.py  roomwait.py  server.py  stub.blend  top.py
models/: actor.py  aiplayer.py  avatar.py  door.blend  light_test.blend  player.py  sphere.bam  sphere.blend  sphere.blend1  world.bam  world.blend  world.blend1
pages/: card_in_game.py  cardchoice.py  createroom.py  deckmenu.py  makedeck.py  result.py  rolenotice.py  roomselect.py  roomwait.py
repos/: ai.py  client.py  model.dc  room.py
